# BITSAuto-Assignments

./: README.md
2023A7PS0029G/submissions/: CMakeList  CMakeLists  lab1_launch.py  package.xml  packages.xml  paramas.yaml  relay.py  safety_node.cpp  safety_node.py  talker.py
2023A7PS0344G/src/lab1_pkg/: CMakeLists.txt  package.xml
2023A7PS0344G/src/lab1_pkg/include/lab1_pkg/: cpp_header.hpp
2023A7PS0344G/src/lab1_pkg/lab1_pkg/: py_node.py  relay.py  talker.py
2023A7PS0344G/src/lab1_pkg/launch/: lab1.launch.py
2023A7PS0344G/src/lab1_pkg/src/: cpp_node.cpp
2023A7PS0344G/src/safety_node/scripts/: safety_node.py
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/log/: latest_build
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/src/lab1_pkg/: CMakeLists.txt  package.xml
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/src/lab1_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/src/lab1_pkg/install/lab1_pkg/lib/lab1_pkg/: listener
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/src/lab1_pkg/install/lab1_pkg/share/lab1_pkg/: local_setup.sh  package.sh
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/src/lab1_pkg/log/: latest_build
2023A7PS0345G/2023A7PS0345G_Special_project/lab1_ws/src/lab1_pkg/src/: listener.cpp  relay.cpp  talker.cpp
2023A7PS0345G/2023A7PS0345G_Special_project/sim_ws/install/: local_setup.sh  setup.sh
2023A7PS0345G/2023A7PS0345G_Special_project/sim_ws/log/: latest_build
2023A7PS0388G/2023A7PS0388G_Special_project/lab1_ws/: relay.py
2023A7PS0388G/2023A7PS0388G_Special_project/lab1_ws/install/: local_setup.sh
2023A7PS0388G/2023A7PS0388G_Special_project/lab1_ws/log/: latest_build
2023A7PS0388G/2023A7PS0388G_Special_project/lab1_ws/src/lab1_pkg/: CMakeLists.txt
2023A7PS0388G/2023A7PS0388G_Special_project/lab1_ws/src/lab1_pkg/install/: setup.sh
2023A7PS0388G/2023A7PS0388G_Special_project/lab1_ws/src/lab1_pkg/launch/: lab1_launch.py
2023A7PS0388G/2023A7PS0388G_Special_project/sim_ws/install/: setup.bash  setup.ps1  setup.zsh
2023A7PS0388G/2023A7PS0388G_Special_project/sim_ws/safety_node/: setup.py
2023A7PS0398G/lab1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2023A7PS0398G/lab1_ws/install/lab1_pkg/lib/lab1_pkg/: relay  safety_node  talker
2023A7PS0398G/lab1_ws/log/: latest_build
2023A7PS0398G/lab1_ws/src/lab1_pkg/: package.xml  setup.py
2023A7PS0398G/lab1_ws/src/lab1_pkg/lab1_pkg/: relay.py
2023A7PS0398G/lab1_ws/src/lab1_pkg/lab1_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2023A7PS0398G/lab1_ws/src/lab1_pkg/lab1_pkg/log/: latest_build
2023A7PS0411G/emergency_braking/: CMakeLists.txt  package.xml
2023A7PS0411G/emergency_braking/src/: scan_listener.cpp  test.py
2023A7PS0411G/lab1_pkg/: package.xml  setup.py
2023A7PS0411G/lab1_pkg/lab1_pkg/: relay.py  talker.py
2023A7PS0411G/lab1_pkg/launch/: lab1_launch.py
2023A7PS0444G/Bitsauto/f1tenth_lab2_template-b49965fb833221c6ba0f83666838c6f9f9971438/safety_node/scripts/: safety_node.py
2023A7PS0444G/Bitsauto/lab1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2023A7PS0444G/Bitsauto/lab1_ws/log/: latest_build
2023A7PS0444G/Bitsauto/lab1_ws/src/lab1_pkg/: CMakeLists.txt  package.xml
2023A7PS0468G/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2023A7PS0468G/ros2_ws/log/: latest_build
2023A7PS0468G/ros2_ws/src/lab1_pkg/: package.xml  setup.py
2023A7PS0468G/ros2_ws/src/lab1_pkg/config/: parameters.yaml
2023A7PS0468G/ros2_ws/src/lab1_pkg/launch/: lab1_launch.py
2023A7PS0468G/ros2_ws/src/lab1_pkg/scripts/: talker.py
2023A7PS0468G/ros2_ws/src/lab2_pkg/: package.xml  setup.py
2023A7PS0468G/sim_ws/install/: local_setup.sh  setup.sh
2023A7PS0468G/sim_ws/log/: latest_build
(+31 files in other folders)
