			<?xml version="1.0"?>
<package format="2">
  <name>lab1_pkg</name>
  <version>0.0.1</version>
  <description>The lab1_pkg package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>