<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab1_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pujit@todo.todo">pujit</maintainer>
  <license>TODO: License declaration</license>

  
<exec_depend>rclpy</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <build_depend>ament_python</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>numpy</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
